--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Nwn Admin</string>
     <string name="api_endpoint">http://92.222.71.56:39817/nwn/api/</string>
+    <string name="account">Account</string>
+    <string name="name">Name</string>
 </resources>
